welcome.lessons.welcome.loopfor.LoopFor.scala.code
for ( nbPas <- 1 to 6){
	if(estSurBiscuit==false){
		avance();
	}
	if(estSurBIscuit==true){
		prendBiscuit();
		if(estDosMur==false){
			recule();
		}
	}
}
